--- a/Heading.html
+++ b/Heading.html
@@ -7,20 +7,30 @@
 
         <title>Heading</title>
         <style>
-      h2{
+      h1,h2{
         color: red;
         background-color: black;
       }
-        </style>
+
+      </style>
+
+      <style>
+      h3,h4{
+
+    color: violet;
+    background-color: purple;
+  }
+    </style>
     </head>
     <body>
 
-   <h1>Sri Venkateswa Fancy Store</h1> 
+   <h1>Sri Venkateswa Fancy Store</h1>
+   <h2>Avalable All Fancy Items</h2>
    <h2>Avalable Stationary Items</h2> 
    <h3>Avalable Tailoring material</h3> 
    <h4>Avalable Decorative Items</h4> 
-   <h5>Avalable Kids Toys</h5> 
-   <h6>Avalable Plastic Items</h6> 
+   <h4>Avalable Kids Toys</h4> 
+   <h4>Avalable Plastic Items</h4> 
     
 </body>
 
